# depgraph

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/depgraph/: __init__.py  models.py
src/depgraph/analysis/: __init__.py  analyzer.py  graph.py  health.py  unused.py  visualizer.py
src/depgraph/cli/: __init__.py  main.py
src/depgraph/parsers/: __init__.py  base.py  parsers.py  registry.py
tests/: test_analysis.py  test_cli.py  test_graph.py  test_parsers.py
